# hunion-backend

./: Cargo.toml  Procfile
migrations/2020-10-22-151730_Users/: down.sql  up.sql
src/: errors.rs  handlers.rs  main.rs  models.rs  schema.rs  user.rs
src/database/: actions.rs  mod.rs  pool.rs
src/payload/: leaderboard.rs  login.rs  mod.rs  register.rs
src/payload/challenges/: challenges.rs  five.rs  four.rs  mod.rs  one.rs  seven.rs  six.rs  three.rs  two.rs
src/utils/: duplicate.rs  is_authenticated.rs  mod.rs  start_time.rs
temp/login/: index.html
temp/register/: index.html
