[package]
name = "hunion-backend"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-files = "0.4.0"
actix-identity = "0.3.1"
actix-session = "0.4.0"
actix-service = "*"
futures = "*"
actix-http = "2.0.0"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.11"
serde = "1.0.114"
serde_derive = "1.0.114"
failure = "0.1.8"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
r2d2 = "0.8.9"
lazy_static = "1.4.0"
regex = { version = "1.3.9", features = [ "perf-inline", "perf-dfa", "perf-literal", "perf-cache", "perf"]}
